test/errors/scope-resolution/redefinition/redefinition-public-import.1.good
redefinition-public-import.chpl:9: error: 'a' has multiple definitions in this scope
redefinition-public-import.chpl:10: note: it was first defined through the 'import' of 'Lib1' here
redefinition-public-import.chpl:2: note: leading to the definition here
redefinition-public-import.chpl:10: note: redefined through the 'import' of 'Lib2' here
redefinition-public-import.chpl:6: note: leading to the definition here
